--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,4 +17,12 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
+<div>
+  {{ date }}
+</div>
+<p>
+  <ngb-alert [dismissible]="true">
+    <strong>Warning!</strong> Better check yourself, you're not looking too good.
+  </ngb-alert>
+</p>
 
