--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,4 +25,9 @@
     <strong>Warning!</strong> Better check yourself, you're not looking too good.
   </ngb-alert>
 </p>
+<ul>
+  <li *ngFor="let item of items | async">
+     {{ item | json }}
+  </li>
+</ul>
 
