--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
-<ul>
-  <li *ngFor="let item of items | async">
-     {{ item.name }}
-  </li>
-</ul>
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<!-- <div  *ngIf="data"  class="global-wrapper">
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
+</div> -->
+<div>
+  <i class="fas fa-spinner"></i>
+  <i class="fab fa-accessible-icon"></i>
+</div>
 
 
