--- a/src/app/shared/ui/header/header.component.html
+++ b/src/app/shared/ui/header/header.component.html
@@ -1,3 +1,26 @@
-<p>
-  header works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-dark" [ngClass]="{'landing': router.url === '/', 'notLanding': !(router.url === '/'),'expandedMobile':isExpanded}">
+  <!-- <a class="navbar-brand" href="#" [hidden]="router.url === '/'">Queo</a> -->
+  <a class="navbar-brand" href="#">
+    <img [src]="data.quadri" width="50" height="50" alt="">
+  </a>
+  <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" 
+  aria-controls="navbarNav" [attr.aria-expanded]="!isExpanded" aria-label="Toggle navigation" (click)="isExpanded = !isExpanded">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav" [ngbCollapse]="!isExpanded">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item" routerLinkActive="active" (click)="isExpanded = false">
+        <a class="nav-link" [routerLink]="['/product']">Productos</a>
+      </li>
+      <!-- <li class="nav-item" routerLinkActive="active" (click)="isExpanded = false">
+        <a class="nav-link" [routerLink]="['/terrazzo']">Terrazzo</a>
+      </li>-->
+      <li class="nav-item" routerLinkActive="active" (click)="isExpanded = false">
+        <a class="nav-link" [routerLink]="['/nosotros']">Nosotros</a>
+      </li> 
+      <li class="nav-item" routerLinkActive="active" (click)="isExpanded = false">
+        <a class="nav-link" [routerLink]="['/contacto']">Contacto</a>
+      </li>
+    </ul>
+  </div>
+</nav>
