--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,5 @@
 
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
+@import "./assets/scss/variables.scss";
+@import "./assets/scss/global.scss";
