--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -10,11 +10,21 @@
 
 .carousel-wrapper {
   // height: 100%;
-  height: calc(100vh - 56px)
+  height: calc(100vh - 96.84px);
+  background-color: pink;
+}
+
+.carousel {
+  width: 100%;
 }
 
 .carousel-inner {
-	height: 100%;
+  height: 100%;
+  width: 100%;
+}
+
+.carousel-item {
+  height: 100%;
 }
 
 .custom {
@@ -29,7 +39,7 @@
 	position: absolute;
   top: 10%;
   left: 5%;
-  width: 40%;
+  // width: 40%;
 }
 
 .logo {
@@ -44,19 +54,19 @@
 .oneliner {
 	color: white;
 	width: 100%;
-  max-width: 90%;
-  min-width: 17rem;
+  // max-width: 90%;
+  // min-width: 17rem;
   position: relative;
   top: 2em;
   left: 4rem;
-  font-size: 2rem;
-  font-weight: 100;
+  font-size: 4rem;
+  font-weight: 400;
   line-height: 1.6;
 }
 
 .botones {
 	position: relative;
-  top: 6em;
+  top: 9rem;
   left: 4rem;
 }
 
