agregada pagina de cotacto

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,44 @@
-<p>
-  contact works!
-</p>
+<div class="contenedor d-flex flex-column flex-md-row align-items-md-stretch">
+    
+  <div class="p-4 item mx-auto">
+      <h5 class="estilo">
+        Consultas
+      </h5>
+      <div class="d-flex small pb-4">
+        <div>
+          <i class="fa fa-phone p-1" aria-hidden="true"></i> 54 9 11 4861 0450
+        </div>
+        <div class="px-3">
+          <i class="fa fa-envelope-o p-1" aria-hidden="true"></i><a style="color: #212529;" [href]="'mailto:info@queo.com.ar'">info@quadri.com.ar</a>
+        </div>
+      </div>
+      <div>
+        <form [formGroup]="myForm" novalidate (ngSubmit)="submit()">
+          <div class="form-group">
+            <label for="nombre">Nombre</label>
+            <input type="text" formControlName="name" class="form-control form-control-lg" id="nombre">
+          </div>
+          <div class="form-group">
+            <label for="email">E-mail</label>
+            <input type="e-mail" formControlName="email" class="form-control form-control-lg" id="email" aria-describedby="emailHelp">
+            <small id="emailHelp" class="form-text text-muted">Nunca compartiremos tu email</small>
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Consulta</label>
+            <textarea formControlName="query" class="form-control" id="exampleFormControlTextarea1" rows="6" style="font-size: 1.25rem;"></textarea>
+          </div>
+          <div class="d-flex">
+            <button [disabled]="!myForm.valid" type="submit" class="btn btn-outline-secondary align-self-start">Enviar</button>
+            <div [@in]="thanks" class="align-self-center pl-2 thanks">Gracias por tu consulta! En breve nos estaremos contactando</div>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div class="p-4 item d-flex flex-column">
+      <agm-map class="" [latitude]="lat" [longitude]="lng" [zoom]=17 [scrollwheel] = false>
+        <agm-marker #map class="mapa" [latitude]="lat" [longitude]="lng" [title]="Quadri"></agm-marker>
+      </agm-map>
+    </div>
+
+  </div>
