--- a/src/app/shared/ui/header/header.component.scss
+++ b/src/app/shared/ui/header/header.component.scss
@@ -1,5 +1,5 @@
 .landing {
-	background-color: var(--dark);
+	background-color: var(--black);
 }
 
 .notLanding {
@@ -11,5 +11,5 @@
 }
 
 nav {
-	min-height: 96.84px;
+	min-height: var(--navbar-height);
 }
