--- a/src/app/shared/ui/footer/footer.component.html
+++ b/src/app/shared/ui/footer/footer.component.html
@@ -1,3 +1,45 @@
-<p>
-  footer works!
-</p>
+
+<div class="container-fluid foot">
+  
+    <div class="row p-3">
+      <div class="col-md-4 d-flex flex-column mb-2">
+        <div class="text-center pb-3 title">Contacto</div>
+        <div class="text-center">
+          <div><i class="fa fa-phone pr-1" aria-hidden="true"></i> +54 11 4861 0450</div>
+          <div><fa-icon [icon]="envelope"></fa-icon><a style="color: #212529;" [href]="'mailto:info@quadri.com.ar'">info@queo.com.ar</a></div>
+        </div>
+        <!-- !! Lo siguiente es para agregar direccion -->
+        <div class="d-flex flex-wrap align-content-start">
+          <div class="d-inline-block pr-1"><fa-icon [icon]="map"></fa-icon></div>
+          <div class="d-inline-block pl-1">
+            Gascon 483 <br> Ciudad Autonoma de Buenos Aires <br> CP C1181ACG, Argentina
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-2">
+        <div class="pb-3 text-center title">Links</div>
+        <div class="text-center">
+          <div><a class="links" [routerLink]="['/aplicaciones']">Aplicaciones</a></div>
+          <div><a class="links" [routerLink]="['/productos']">Productos</a></div>
+          <div><a class="links" [routerLink]="['/inspiracion']">Inspiracion</a></div>
+          <div><a class="links" [routerLink]="['/nosotros']">Nosotros</a></div>
+          <div><a class="links" [routerLink]="['/contact']">Contacto</a></div>
+        </div>
+      </div>
+      <div class="col-md-4 d-flex flex-column social text-center mb-2 mobileWidth">
+        <div class="pb-3 text-center title">Encontranos</div>
+        <div class="d-flex justify-content-center">
+          <a href="https://www.facebook.com/quadrisa/">
+            <fa-icon [icon]="facebook"></fa-icon>
+          </a>
+          <a href="https://www.instagram.com/queobsas/">
+            <fa-icon [icon]="instagram"></fa-icon>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="px-2 ml-auto nota">Copyright © 2017 Queo - web design by Maurito</div>
+    </div>
+    
+</div>
