--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -10,10 +10,14 @@ $green-dark:  rgb(0,150, 145);
 $green-light: rgb(110, 187, 191);
 
 :root {
+  // colores
   --black:       rgb(0, 0, 0);
   --grey-medium: rgb(76, 76, 76);
   --grey-light:  rgb(178, 178, 178);
   --grey:        rgb(90,90,90);
   --green-dark:  rgb(0,150, 145);
   --green-light: rgb(110, 187, 191);
+
+  // medidas
+  --navbar-height: 96.84px;
 }
