mejorado el footer. Arreglado el problema de fontawesome

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -37,7 +37,7 @@
 
     <div class="p-4 item d-flex flex-column">
       <agm-map class="" [latitude]="lat" [longitude]="lng" [zoom]=17 [scrollwheel] = false>
-        <agm-marker #map class="mapa" [latitude]="lat" [longitude]="lng" [title]="Quadri"></agm-marker>
+        <agm-marker #map class="mapa" [latitude]="lat" [longitude]="lng"></agm-marker>
       </agm-map>
     </div>
 
