--- a/src/app/shared/ui/footer/footer.component.html
+++ b/src/app/shared/ui/footer/footer.component.html
@@ -1,18 +1,18 @@
 
 <div class="container-fluid foot">
-  
+
     <div class="row p-3">
       <div class="col-md-4 d-flex flex-column mb-2">
         <div class="text-center pb-3 title">Contacto</div>
         <div class="text-center">
-          <div><i class="fa fa-phone pr-1" aria-hidden="true"></i> +54 11 4861 0450</div>
-          <div><fa-icon [icon]="envelope"></fa-icon><a style="color: #212529;" [href]="'mailto:info@quadri.com.ar'">info@queo.com.ar</a></div>
-        </div>
-        <!-- !! Lo siguiente es para agregar direccion -->
-        <div class="d-flex flex-wrap align-content-start">
-          <div class="d-inline-block pr-1"><fa-icon [icon]="map"></fa-icon></div>
-          <div class="d-inline-block pl-1">
-            Gascon 483 <br> Ciudad Autonoma de Buenos Aires <br> CP C1181ACG, Argentina
+          <div>
+            <fa-icon [icon]="telephone"></fa-icon> +54 11 4861 0450
+          </div>
+          <div>
+            <fa-icon [icon]="envelope"></fa-icon><a style="color: #ddd;" [href]="'mailto:info@quadri.com.ar'">info@quadri.com.ar</a>
+          </div>
+            <div class="d-inline-block pl-1">
+              <fa-icon [icon]="map"></fa-icon>Gascon 483 <br> Ciudad Autonoma de Buenos Aires <br> CP C1181ACG, Argentina
           </div>
         </div>
       </div>
