terminado primer version del footer. Agregados iconos de marcas + regulares de fontawesome con yarn

--- a/src/app/shared/ui/footer/footer.component.html
+++ b/src/app/shared/ui/footer/footer.component.html
@@ -6,13 +6,13 @@
         <div class="text-center pb-3 title">Contacto</div>
         <div class="text-center">
           <div>
-            <fa-icon [icon]="telephone"></fa-icon> +54 11 4861 0450
+            <fa-icon [icon]="telephone"></fa-icon>&nbsp; +54 11 4861 0450
           </div>
           <div>
-            <fa-icon [icon]="envelope"></fa-icon><a style="color: #ddd;" [href]="'mailto:info@quadri.com.ar'">info@quadri.com.ar</a>
+            <fa-icon [icon]="envelope"></fa-icon>&nbsp; <a style="color: #ddd;" [href]="'mailto:info@quadri.com.ar'">info@quadri.com.ar</a>
           </div>
             <div class="d-inline-block pl-1">
-              <fa-icon [icon]="map"></fa-icon>Gascon 483 <br> Ciudad Autonoma de Buenos Aires <br> CP C1181ACG, Argentina
+              <fa-icon [icon]="map"></fa-icon>&nbsp; Gascon 483 <br> Ciudad Autonoma de Buenos Aires <br> CP C1181ACG, Argentina
           </div>
         </div>
       </div>
@@ -29,17 +29,17 @@
       <div class="col-md-4 d-flex flex-column social text-center mb-2 mobileWidth">
         <div class="pb-3 text-center title">Encontranos</div>
         <div class="d-flex justify-content-center">
-          <a href="https://www.facebook.com/quadrisa/">
-            <fa-icon [icon]="facebook"></fa-icon>
+          <a class="links" href="https://www.facebook.com/quadrisa/">
+            <fa-icon class="networks p-3" [icon]="facebook"></fa-icon>
           </a>
-          <a href="https://www.instagram.com/queobsas/">
-            <fa-icon [icon]="instagram"></fa-icon>
+          <a class="links" href="https://www.instagram.com/queobsas/">
+            <fa-icon class="networks p-3" [icon]="instagram"></fa-icon>
           </a>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="px-2 ml-auto nota">Copyright © 2017 Queo - web design by Maurito</div>
+      <div class="px-2 ml-auto nota">Copyright © 2018 Quadri - web design by Maurito</div>
     </div>
     
 </div>
