--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -17,6 +17,7 @@ $green-light: rgb(110, 187, 191);
   --grey:        rgb(90,90,90);
   --green-dark:  rgb(0,150, 145);
   --green-light: rgb(110, 187, 191);
+  --light:       rgb(86.7%, 86.7%, 86.7%);
 
   // medidas
   --navbar-height: 96.84px;
