--- a/src/app/shared/ui/footer/footer.component.scss
+++ b/src/app/shared/ui/footer/footer.component.scss
@@ -2,24 +2,23 @@
 .foot {
 	background-color: var(--black);
   font-size: 0.9rem;
-  color: #ddd;
+  font-weight: 100;
+  color: var(--light);
 }
 
 .title {
-	color: #ddd;
 	font-size: 1rem;
 }
 
 .links {
-	color: #ddd;
+	color: var(--light);
 }
 
 .networks {
-	max-width: 2.5rem;
+	font-size: 3rem;
 }
 
 .nota {
-	color: #ddd;
 	font-size: 0.7rem;
   font-weight: 100;
 }
