--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -5,37 +5,49 @@ Como el template de cada slide se crea dinamicamente por el componente de ng-boo
 -->
 
 <div  *ngIf="carrousel"  class="carousel-wrapper d-flex">
-  <ngb-carousel [interval]="2000" (slide)="cambio($event)">
+  <ngb-carousel [interval]="0"  [showNavigationArrows]="false" (slide)="cambio($event)">
     <ng-template ngbSlide #slide1>
       <div class="carousel-caption">
-        <h3>Metaselo</h3>
-        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-        <img style="display:none;" [src]="data[1]" width="100" alt="">
+        <div class="oneliner">Metaselo en el orto viejo</div>
+        <div class="botones">
+          <button type="button" class="btn btn-lg botonComprar" (click)= "toProducts()">Comprar</button>
+          <button type="button" class="ml-2 btn btn-lg btn-outline-secondary botonConocer" (click)= "more()">Conocer mas</button>
+        </div>
       </div>
+      <img style="display:none;" [src]="data[1]" width="100" alt="">
       <div class="custom" [ngStyle]="{'background-image': 'url(' + data[0] + ')'}"></div>
     </ng-template>
     <ng-template ngbSlide #slide2>
       <div class="carousel-caption">
-        <h3>en</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <img style="display:none;" [src]="data[2]" width="100" alt="">
+        <div class="oneliner">Metaselo en el orto viejo</div>
+        <div class="botones">
+          <button type="button" class="btn btn-lg botonComprar" (click)= "toProducts()">Comprar</button>
+          <button type="button" class="ml-2 btn btn-lg btn-outline-secondary botonConocer" (click)= "more()">Conocer mas</button>
+        </div>
       </div>
+      <img style="display:none;" [src]="data[2]" width="100" alt="">
       <div class="custom" [ngStyle]="{'background-image': 'url(' + data[1] + ')'}"></div>
     </ng-template>
     <ng-template ngbSlide #slide3>
       <div class="carousel-caption">
-        <h3>el</h3>
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-        <img style="display:none;" [src]="data[3]" width="100" alt="">
+        <div class="oneliner">Metaselo en el orto viejo</div>
+        <div class="botones">
+          <button type="button" class="btn btn-lg botonComprar" (click)= "toProducts()">Comprar</button>
+          <button type="button" class="ml-2 btn btn-lg btn-outline-secondary botonConocer" (click)= "more()">Conocer mas</button>
+        </div>
       </div>
+      <img style="display:none;" [src]="data[3]" width="100" alt="">
       <div class="custom" [ngStyle]="{'background-image': 'url(' + data[2] + ')'}"></div>
     </ng-template>
     <ng-template ngbSlide #slide3>
       <div class="carousel-caption">
-        <h3>ORTO</h3>
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-        <img style="display:none;" [src]="data[0]" width="100" alt="">
+        <div class="oneliner">Metaselo en el orto viejo</div>
+        <div class="botones">
+          <button type="button" class="btn btn-lg botonComprar" (click)= "toProducts()">Comprar</button>
+          <button type="button" class="ml-2 btn btn-lg btn-outline-secondary botonConocer" (click)= "more()">Conocer mas</button>
+        </div>
       </div>
+      <img style="display:none;" [src]="data[0]" width="100" alt="">
       <div class="custom" [ngStyle]="{'background-image': 'url(' + data[3] + ')'}"></div>
     </ng-template>
   </ngb-carousel>
@@ -56,6 +68,11 @@ Como el template de cada slide se crea dinamicamente por el componente de ng-boo
   </div>
   
 </div>
+
+<app-steps></app-steps>
+
+<app-trust-quadri></app-trust-quadri>
+
 
 
   
