--- a/src/app/shared/ui/footer/footer.component.scss
+++ b/src/app/shared/ui/footer/footer.component.scss
@@ -1,13 +1,14 @@
 
 .foot {
 	background-color: var(--black);
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   font-weight: 100;
   color: var(--light);
 }
 
 .title {
 	font-size: 1rem;
+	font-weight: 500;
 }
 
 .links {
