--- a/src/app/shared/components/trust-quadri/trust-quadri.component.html
+++ b/src/app/shared/components/trust-quadri/trust-quadri.component.html
@@ -1,6 +1,6 @@
 <div class="p-5 container-fluid">
     <div class="text-center title">
-      ¿Por qué terrazzo? ¿Por qué Quadri?
+      ¿ Por qué terrazzo ?  ¿ Por qué Quadri ?
     </div>
     <div class="row">
       <div class=" p-5 col d-flex flex-column align-items-center">
@@ -9,7 +9,7 @@
         </div>
         <div class="align-self-center px-2 sub-title text-center">Singular</div>
         <div class="py-5 text-center text">
-          Un producto distinto,
+          Dale a tus proyectos personalidad y originalidad. Usando Terrazzo podras alcanzar el nivel de customizacion justo para materializar tu vision.
         </div>
       </div>
       <div class="p-5 col d-flex flex-column align-items-center">
@@ -18,7 +18,7 @@
         </div>
         <div class="align-self-center px-2 sub-title text-center">A prueba del tiempo</div>
         <div class="py-5 text-center text">
-          Contactanos y cuentanos los detalles de tu proyecto para que podamos ayudarte
+          Terrazzo es un material sumamente noble, diseñado para resistir el paso del tiempo.
         </div>
       </div>
       <div class="p-5 col d-flex flex-column align-items-center">
@@ -27,7 +27,7 @@
         </div>
         <div class="align-self-center px-2 sub-title text-center">Calidad</div>
         <div class="py-5 text-center text" >
-          Juntos lograremos crear un espacio sofisticado, elefante y especial
+          Con fanatica dedicación fabricamos todos nuestos productos. Nada es tercerizado. Materias primas supervisadas y nuestros procesos perfeccionados al minimo detalle.
         </div>
       </div>
       <div class="p-5 col d-flex flex-column align-items-center">
@@ -36,7 +36,7 @@
         </div>
         <div class="align-self-center px-2 sub-title text-center">Experiencia</div>
         <div class="py-5 text-center text" >
-          Juntos lograremos crear un espacio sofisticado, elefante y especial
+          Desde 1861. Quizas no lo sepas, pero seguro te topaste con alguno de nuestros proyectos. Podes confiar en nosotros, estamos hace mucho y planeamos seguir mucho más!
         </div>
       </div>
     </div>
