--- a/src/app/shared/ui/header/header.component.html
+++ b/src/app/shared/ui/header/header.component.html
@@ -2,8 +2,8 @@
 <nav class="navbar navbar-expand-lg sticky-top navbar-dark landing">
   <!-- <div class="container"> -->
 
-    <a class="navbar-brand" href="/">
-      <img [src]="data.quadriBlanco" width="100" alt="">
+    <a class="navbar-brand" [routerLink]="['/']">
+      <img [src]="data.logoQuadriBlanco" width="100" alt="">
     </a>
     <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" 
     aria-controls="navbarNav" [attr.aria-expanded]="!isExpanded" aria-label="Toggle navigation" (click)="isExpanded = !isExpanded">
