--- a/src/app/applications/applications.component.html
+++ b/src/app/applications/applications.component.html
@@ -1,48 +1,63 @@
 <div class="container-fluid">
   <div class="apps">
+    
     <div class="row">
-      <div class="col-lg-4 col-sm-12 custom d-flex flex-row align-items-center"
-      [ngStyle]="{'background-image': 'url(' + data.ambients[2] + ')'}"
-      (click) = "goTo('/')" >
-        <div class="align-self-center d-flex flex-column w-100">
-          <div><img [src]="data.images.pisoInt" class="iconsH p-2 mb-3" alt=""></div>
-          <div class="appNames text-center p-2">PISOS <br> INTERIORES</div>
+
+      <div class="col-lg-4 col-sm-12 p-0 application" (click) = "goTo('/')" >
+        <div [ngStyle]="{'background-image': 'url(' + data.ambients[3] + ')'}"
+        class="custom" #pisosInt></div>
+        <div class="d-flex flex-column justify-content-center w-100 appText"  (mouseover)="mouseIn($event, 'pisosInt')" (mouseout)="mouseOut($event, 'pisosInt')" #application>
+          <div class="align-self-center w-100"><img [src]="data.images.pisoInt" class="iconsH p-2 mb-3" alt=""></div>
+          <div class="appNames text-center p-2 align-self-center">PISOS <br> INTERIORES</div>
         </div>
       </div>
-      <div class="col-lg-4 col-sm-12 custom d-flex flex-row align-items-center"
-      [ngStyle]="{'background-image': 'url(' + data.ambients[3] + ')'}">
-        <div class="align-self-center d-flex flex-column w-100">
-          <div><img [src]="data.images.pisoExt" class="iconsH p-2 mb-3" alt=""></div>
-          <div class="appNames text-center p-2">PISOS <br> EXTERIORES</div>
+
+      <div class="col-lg-4 col-sm-12 p-0 application" (click) = "goTo('/')" >
+        <div [ngStyle]="{'background-image': 'url(' + data.ambients[3] + ')'}"
+        class="custom" #pisosExt></div>
+        <div class="d-flex flex-column justify-content-center w-100 appText"  (mouseover)="mouseIn($event, 'pisosExt')" (mouseout)="mouseOut($event, 'pisosExt')" #application>
+          <div class="align-self-center w-100"><img [src]="data.images.pisoExt" class="iconsH p-2 mb-3" alt=""></div>
+          <div class="appNames text-center p-2 align-self-center">PISOS <br> EXTERIORES</div>
         </div>
       </div>
-      <div class="col-lg-4 col-sm-12 custom d-flex flex-row align-items-center"
-      [ngStyle]="{'background-image': 'url(' + data.ambients[0] + ')'}">
-        <div class="align-self-center d-flex flex-column w-100">
-          <div><img [src]="data.images.paredInt" class="iconsV p-2 mb-3" alt=""></div>
-          <div class="appNames text-center p-2">PAREDES <br> INTERIORES</div>
+
+      <div class="col-lg-4 col-sm-12 p-0 application" (click) = "goTo('/')" >
+        <div [ngStyle]="{'background-image': 'url(' + data.ambients[3] + ')'}"
+        class="custom" #paredInt></div>
+        <div class="d-flex flex-column justify-content-center w-100 appText"  (mouseover)="mouseIn($event, 'paredInt')" (mouseout)="mouseOut($event, 'paredInt')" #application>
+          <div class="align-self-center w-100"><img [src]="data.images.paredInt" class="iconsV p-2 mb-3" alt=""></div>
+          <div class="appNames text-center p-2 align-self-center">PAREDES<br>INTERIORES</div>
         </div>
       </div>
+
     </div>
+
     <div class="row">
-      <div class="col-lg-4 col-sm-12 custom d-flex flex-row align-items-center"
-      [ngStyle]="{'background-image': 'url(' + data.ambients[1] + ')'}">
-        <div class="align-self-center d-flex flex-column w-100">
-          <div><img [src]="data.images.paredExt" class="iconsV p-2 mb-3" alt=""></div>
-          <div class="appNames text-center p-2">PAREDES <br> EXTERIORES</div>
+
+      <div class="col-lg-4 col-sm-12 p-0 application" (click) = "goTo('/')" >
+        <div [ngStyle]="{'background-image': 'url(' + data.ambients[3] + ')'}"
+        class="custom" #paredExt></div>
+        <div class="d-flex flex-column justify-content-center w-100 appText"  (mouseover)="mouseIn($event, 'paredExt')" (mouseout)="mouseOut($event, 'paredExt')" #application>
+          <div class="align-self-center w-100"><img [src]="data.images.paredExt" class="iconsV p-2 mb-3" alt=""></div>
+          <div class="appNames text-center p-2 align-self-center">PAREDES <br> EXTERIORES</div>
         </div>
       </div>
-      <div class="col-lg-4 col-sm-12 custom d-flex flex-row align-items-center"
-      [ngStyle]="{'background-image': 'url(' + data.ambients[2] + ')'}">
-        <div class="align-self-center d-flex flex-column w-100">
-          <div><img [src]="data.images.mesa" class="iconsH p-2 mb-3" alt=""></div>
-          <div class="appNames text-center p-2">MESAS</div>
+
+      <div class="col-lg-4 col-sm-12 p-0 application" (click) = "goTo('/')" >
+        <div [ngStyle]="{'background-image': 'url(' + data.ambients[2] + ')'}"
+        class="custom" #mesas></div>
+        <div class="d-flex flex-column justify-content-center w-100 appText"  (mouseover)="mouseIn($event, 'mesas')" (mouseout)="mouseOut($event, 'mesas')" #application>
+          <div class="align-self-center w-100"><img [src]="data.images.mesa" class="iconsH p-2 mb-3" alt=""></div>
+          <div class="appNames text-center p-2 align-self-center">MESAS<br>Y<br>BARRAS</div>
         </div>
       </div>
+
       <div class="col-lg-4 col-sm-12 texto d-flex flex-row align-items-center text-center">
         Podemos ayudarte a crear un espacio especial con Terrazzo
       </div>
+
     </div>
+
   </div>
 
   <app-steps></app-steps>
