--- a/src/app/applications/applications.component.scss
+++ b/src/app/applications/applications.component.scss
@@ -14,27 +14,31 @@
   color: white;
 }
 
+.application {
+  cursor: pointer;
+}
+
 .custom {
 	height:100%;
-	flex: 1;
+  flex: 1;
 	background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  -webkit-filter: brightness(100%);
-  -moz-filter: brightness(100%);
-  -o-filter: brightness(100%);
-  -ms-filter: brightness(100%);
-  filter: brightness(100%);
+  -webkit-filter: brightness(80%);
+  -moz-filter: brightness(80%);
+  -o-filter: brightness(80%);
+  -ms-filter: brightness(80%);
+  filter: brightness(80%);
 }
 
-.custom:hover{
-  -webkit-filter: brightness(70%);
-  -moz-filter: brightness(70%);
-  -o-filter: brightness(70%);
-  -ms-filter: brightness(70%);
-  filter: brightness(70%);
-  cursor: pointer;
+.customDark{
+  -webkit-filter: brightness(50%);
+  -moz-filter: brightness(50%);
+  -o-filter: brightness(50%);
+  -ms-filter: brightness(50%);
+  filter: brightness(50%);
 }
+
 
 .iconsH {
   width: 30%;
@@ -50,6 +54,14 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.appText {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  cursor: pointer;
 }
 
 .appNames {
