agregado un factory para que se pre-cargue la info mejor. Esto va a favorecer a poder hacer SEO friendly la we. Tambien modificado como se carga el spinner

--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -11,7 +11,7 @@
 .carousel-wrapper {
   // height: 100%;
   height: calc(100vh - var(--navbar-height));
-  background-color: pink;
+  background-color: var(--green-light);
 }
 
 .carousel {
