--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,10 @@
-.global-wrapper, .spinner {
-  height: 100%;
-}
+// .global-wrapper, .spinner {
+//   height: 100%;
+// }
 
-.spinner {
-  background-color: var(--green-light);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+// .spinner {
+//   background-color: var(--green-light);
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+// }
