terminado menu de productos

--- a/src/app/app-center/app-menu/app-menu.component.html
+++ b/src/app/app-center/app-menu/app-menu.component.html
@@ -3,7 +3,7 @@
     
     <div class="row">
 
-      <div class="col-lg-4 col-sm-12 p-0 application" (click) = "goTo('/')" >
+      <div class="col-lg-4 col-sm-12 p-0 application" (click) = "goTo('/aplicaciones/pisos-interiores')" >
         <div [ngStyle]="{'background-image': 'url(' + data.ambients[3] + ')'}"
         class="custom" #pisosInt></div>
         <div class="d-flex flex-column justify-content-center w-100 appText"  (mouseover)="mouseIn($event, 'pisosInt')" (mouseout)="mouseOut($event, 'pisosInt')" #application>
@@ -12,7 +12,7 @@
         </div>
       </div>
 
-      <div class="col-lg-4 col-sm-12 p-0 application" (click) = "goTo('/')" >
+      <div class="col-lg-4 col-sm-12 p-0 application" (click) = "goTo('/aplicaciones/pisos-exteriores')" >
         <div [ngStyle]="{'background-image': 'url(' + data.ambients[3] + ')'}"
         class="custom" #pisosExt></div>
         <div class="d-flex flex-column justify-content-center w-100 appText"  (mouseover)="mouseIn($event, 'pisosExt')" (mouseout)="mouseOut($event, 'pisosExt')" #application>
@@ -21,7 +21,7 @@
         </div>
       </div>
 
-      <div class="col-lg-4 col-sm-12 p-0 application" (click) = "goTo('/')" >
+      <div class="col-lg-4 col-sm-12 p-0 application" (click) = "goTo('/aplicaciones/paredes-interiores')" >
         <div [ngStyle]="{'background-image': 'url(' + data.ambients[3] + ')'}"
         class="custom" #paredInt></div>
         <div class="d-flex flex-column justify-content-center w-100 appText"  (mouseover)="mouseIn($event, 'paredInt')" (mouseout)="mouseOut($event, 'paredInt')" #application>
@@ -34,7 +34,7 @@
 
     <div class="row">
 
-      <div class="col-lg-4 col-sm-12 p-0 application" (click) = "goTo('/')" >
+      <div class="col-lg-4 col-sm-12 p-0 application" (click) = "goTo('/aplicaciones/paredes-exteriores')" >
         <div [ngStyle]="{'background-image': 'url(' + data.ambients[3] + ')'}"
         class="custom" #paredExt></div>
         <div class="d-flex flex-column justify-content-center w-100 appText"  (mouseover)="mouseIn($event, 'paredExt')" (mouseout)="mouseOut($event, 'paredExt')" #application>
@@ -43,7 +43,7 @@
         </div>
       </div>
 
-      <div class="col-lg-4 col-sm-12 p-0 application" (click) = "goTo('/')" >
+      <div class="col-lg-4 col-sm-12 p-0 application" (click) = "goTo('/aplicaciones/mesas')" >
         <div [ngStyle]="{'background-image': 'url(' + data.ambients[2] + ')'}"
         class="custom" #mesas></div>
         <div class="d-flex flex-column justify-content-center w-100 appText"  (mouseover)="mouseIn($event, 'mesas')" (mouseout)="mouseOut($event, 'mesas')" #application>
