--- a/src/app/app-center/application/application.component.scss
+++ b/src/app/app-center/application/application.component.scss
@@ -1,21 +1,50 @@
-.imagen-presentacion {
+.imagen-presentacion, .imagen-segunda {
   height: 50vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
+.imagen-segunda {
+ height: 70vh;
+}
+
 .icon {
-  height: 100%
+  height: 130%
 }
 
 .titulo {
   font-size: 2.5rem;
-  font-weight: 100;
+  font-weight: 130;
 }
 
 .prod {
-  height: 20rem;
-  width: 20rem;
+  height: 15rem;
+  width: 15rem;
   background-color: var(--green-dark);
+  font-size: 1.8rem;
+  font-weight: 130;
+  color: white;
+}
+
+.prod:hover {
+  cursor: pointer;
+  -webkit-filter: brightness(80%);
+  -moz-filter: brightness(80%);
+  -o-filter: brightness(80%);
+  -ms-filter: brightness(80%);
+  filter: brightness(80%);
+}
+
+// esto no esta funcionando, xq el texto ya esta filtrado. 
+// La tecnico es una buena referencia para despues transferirla al app-menu. 
+// Tambien para usar aca con la misma tecnica de posicionamiento que use en el app-menu
+.prod:hover>div {
+  cursor: pointer;
+  // color: red;
+  -webkit-filter: brightness(130%);
+  -moz-filter: brightness(130%);
+  -o-filter: brightness(130%);
+  -ms-filter: brightness(130%);
+  filter: brightness(130%);
 }
