terminado componente blends

--- a/src/app/app-center/application/application.component.html
+++ b/src/app/app-center/application/application.component.html
@@ -14,7 +14,7 @@
   <div class="container" >
     <div class="titulo mb-3">Conoce todos nuestras lineas de productos para {{ application.titulo | lowercase }} </div>
     <div class="d-flex product-container flex-wrap">
-      <div *ngFor="let prod of application.products" class="prod m-3 d-flex align-items-center">
+      <div *ngFor="let prod of application.products" class="prod m-3 d-flex align-items-center" (click)="routeTo(prod)">
         <div class="text-center w-100 prod-name"> {{ products[prod].name }} </div>
       </div>
     </div>
