terminado componenete de dimension

--- a/src/app/products/product/product.component.html
+++ b/src/app/products/product/product.component.html
@@ -9,4 +9,5 @@
   </div>
 </div>
 
-<app-blends [colors]="product.colors" ></app-blends>
+<app-blends [colors]="product.colors"></app-blends>
+<app-dim [dim]="product.dim" [thikness]="product.thickness"></app-dim>
