--- a/src/app/app-center/app-menu/app-menu.component.html
+++ b/src/app/app-center/app-menu/app-menu.component.html
@@ -7,7 +7,7 @@
         <div [ngStyle]="{'background-image': 'url(' + data.ambients[3] + ')'}"
         class="custom" #pisosInt></div>
         <div class="d-flex flex-column justify-content-center w-100 appText"  (mouseover)="mouseIn($event, 'pisosInt')" (mouseout)="mouseOut($event, 'pisosInt')" #application>
-          <div class="align-self-center w-100"><img [src]="data.images.pisoInt" class="iconsH p-2 mb-3" alt=""></div>
+          <div class="align-self-center w-100"><img [src]="staticData.pisoInt" class="iconsH p-2 mb-3" alt=""></div>
           <div class="appNames text-center p-2 align-self-center">PISOS <br> INTERIORES</div>
         </div>
       </div>
