varios cambios en ui y base de datos

--- a/src/app/app-center/app-menu/app-menu.component.scss
+++ b/src/app/app-center/app-menu/app-menu.component.scss
@@ -41,7 +41,7 @@
 
 
 .iconsH {
-  width: 30%;
+  width: 10rem;
   height: auto;
   display: block;
   margin-left: auto;
@@ -49,8 +49,8 @@
 }
 
 .iconsV {
-  width: 15%;
-  height: auto;
+  width: auto;
+  height: 10rem;
   display: block;
   margin-left: auto;
   margin-right: auto;
