--- a/src/app/products/prod-menu/prod-menu.component.scss
+++ b/src/app/products/prod-menu/prod-menu.component.scss
@@ -1,11 +1,28 @@
+.prod-header-wrapper{
+  position: relative;
+}
+
 .imagen-presentacion, {
   height: 30vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-filter: brightness(80%);
+  -moz-filter: brightness(80%);
+  -o-filter: brightness(80%);
+  -ms-filter: brightness(80%);
+  filter: brightness(80%);
 }
 
-.titulo {
+.title-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.title {
   font-size: 2.5rem;
   font-weight: 130;
   color: white;
@@ -14,17 +31,46 @@
 .prod {
   height: 21rem;
   width: 21rem;
+  position: relative;
+}
+
+.background {
   background-color: var(--green-dark);
+  height: 100%;
+  width: 100%;
+}
+
+.text-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
   font-size: 1.8rem;
   font-weight: 130;
   color: white;
+  height: 100%;
+  width: 100%;
 }
 
-.prod:hover {
+.text-wrapper:hover {
   cursor: pointer;
+}
+
+// hago target al hijo de la clase .prod cuando hoover. puntualente sobre div.background
+.prod:hover>div.background {
   -webkit-filter: brightness(80%);
   -moz-filter: brightness(80%);
   -o-filter: brightness(80%);
   -ms-filter: brightness(80%);
   filter: brightness(80%);
 }
+
+@media (max-width: 767.98px) {
+
+  .title {
+    font-size: 2rem;
+    font-weight: 130;
+    color: white;
+  }
+
+ }
