--- a/src/app/shared/components/trust-quadri/trust-quadri.component.html
+++ b/src/app/shared/components/trust-quadri/trust-quadri.component.html
@@ -1,4 +1,5 @@
-<div class="p-5 container-fluid">
+<div class="jumbotron jumbotron-fluid m-0 pb-0 trust-wrapper">
+  <div class="container">
     <div class="text-center title">
       ¿ Por qué terrazzo ?  ¿ Por qué Quadri ?
     </div>
@@ -41,3 +42,4 @@
       </div>
     </div>
   </div>
+</div>
