--- a/src/app/shared/ui/footer/footer.component.html
+++ b/src/app/shared/ui/footer/footer.component.html
@@ -1,5 +1,5 @@
-
-<div class="container-fluid foot">
+<div class="jumbotron jumbotron-fluid m-0 foot">
+  <div class="container">
 
     <div class="row p-4">
       <div class="col-md-4 d-flex flex-column mb-2">
@@ -38,8 +38,9 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="px-2 ml-auto nota">Copyright © 2018 Quadri - web design by Maurito</div>
-    </div>
     
+  </div>
+</div>
+<div class="d-flex copy">
+  <div class="px-2 ml-auto nota">Copyright © 2018 Quadri - web design by Maurito</div>
 </div>
