--- a/src/app/shared/ui/header/header.component.html
+++ b/src/app/shared/ui/header/header.component.html
@@ -3,7 +3,7 @@
   <!-- <div class="container"> -->
 
     <a class="navbar-brand" [routerLink]="['/']">
-      <img [src]="data.logoQuadriBlanco" width="100" alt="">
+      <img [src]="logo" width="100" alt="">
     </a>
     <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" 
     aria-controls="navbarNav" [attr.aria-expanded]="!isExpanded" aria-label="Toggle navigation" (click)="isExpanded = !isExpanded">
