--- a/src/app/products/product/product.component.scss
+++ b/src/app/products/product/product.component.scss
@@ -1,11 +1,43 @@
+.prod-header-wrapper{
+  position: relative;
+}
+
 .imagen-presentacion {
   height: 50vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-filter: brightness(70%);
+  -moz-filter: brightness(70%);
+  -o-filter: brightness(70%);
+  -ms-filter: brightness(70%);
+  filter: brightness(70%);
 }
 
-.titulo {
-  font-size: 2.5rem;
-  font-weight: 130;
+.title-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  color: white;
+}
+
+.title {
+  font-size: 5rem;
+  font-weight: 100;
+}
+
+.sub-title {
+  font-size: 2rem;
+  font-weight: 100;
+}
+
+@media (max-width: 744px) {
+
+  .sub-title {
+    font-size: 1rem;
+    font-weight: 100;
+  }
+
 }
