--- a/src/app/shared/components/trust-quadri/trust-quadri.component.html
+++ b/src/app/shared/components/trust-quadri/trust-quadri.component.html
@@ -1,8 +1,8 @@
 <div class="jumbotron jumbotron-fluid m-0 pb-0 trust-wrapper">
   <div class="container">
-    <div class="text-center title">
+    <!-- <div class="text-center title">
       ¿ Por qué terrazzo ?  ¿ Por qué Quadri ?
-    </div>
+    </div> -->
     <div class="row">
       <div class=" p-5 col d-flex flex-column align-items-center">
         <div>
