--- a/src/app/app-center/application/application.component.html
+++ b/src/app/app-center/application/application.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid imagen-presentacion mb-0"
+<!-- <div class="jumbotron jumbotron-fluid imagen-presentacion mb-0"
 [ngStyle]="{'background-image': 'url(' + application.presentacion + ')'}">
 </div>
 
@@ -6,6 +6,17 @@
   <div class="container">
     <div class="titulo">{{ application.titulo }}</div>
     <p class="lead">{{ application.texto }}</p>
+  </div>
+</div> -->
+
+<div class="app-header-wrapper">
+  <div class="jumbotron jumbotron-fluid imagen-presentacion mb-0"
+    [ngStyle]="{'background-image': 'url(' + application.presentacion + ')'}"></div>
+  <div class="title-wrapper jumbotron mb-0 bg-transparent">
+    <div class="container">
+      <div class="title">{{ application.titulo }}</div>
+      <p class="sub-title">{{ application.texto }}</p>
+    </div>
   </div>
 </div>
 
