--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -6,10 +6,10 @@
       </h5>
       <div class="d-flex small pb-4">
         <div>
-          <i class="fa fa-phone p-1" aria-hidden="true"></i>+54 11 4861 0450
+          <fa-icon [icon]="telephone"></fa-icon>&nbsp;+54 11 4861 0450
         </div>
         <div class="px-3">
-          <i class="fa fa-envelope-o p-1" aria-hidden="true"></i><a style="color: #212529;" [href]="'mailto:info@queo.com.ar'">info@quadri.com.ar</a>
+          <fa-icon [icon]="envelope"></fa-icon>&nbsp;<a style="color: #212529;" [href]="'mailto:info@queo.com.ar'">info@quadri.com.ar</a>
         </div>
       </div>
       <div>
