--- a/src/app/products/prod-menu/prod-menu.component.html
+++ b/src/app/products/prod-menu/prod-menu.component.html
@@ -1,5 +1,5 @@
 <div class="prod-header-wrapper">
-  <div class="imagen-presentacion" [ngStyle]="{'background-image': 'url(' + products.presentacion + ')'}"></div>
+  <div class="imagen-presentacion" [ngStyle]="{'background-image': 'url(' + featured + ')'}"></div>
   <div class="title-wrapper jumbotron mb-0 bg-transparent">
     <div class="container">
       <div class="title">Conoce todos nuestras lineas de productos</div>
@@ -8,14 +8,14 @@
 </div>
 
 <div class="jumbotron jumbotron-fluid mb-0 bg-white">
-    <div class="container">
-      <div class="d-flex product-container flex-wrap">
-        <div *ngFor="let prod of productsArray" class="prod m-3" (click)="routeTo(prod)">
-          <div class="background"></div>
-          <div class="text-wrapper d-flex align-items-center">
-            <div class="text-center w-100 prod-name"> {{ products[prod].name }} </div>
-          </div>
+  <div class="container">
+    <div class="d-flex product-container flex-wrap">
+      <div *ngFor="let prod of productsArray" class="prod m-3" (click)="routeTo(prod)">
+        <div class="background"></div>
+        <div class="text-wrapper d-flex align-items-center">
+          <div class="text-center w-100 prod-name"> {{ products[prod].name }} </div>
         </div>
       </div>
     </div>
   </div>
+</div>
